# dataclassy

./: .envrc  CHANGELOG.md  LICENSE  README.md  design.md  docs.md  pyproject.toml  status.md  vision.md
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: ci.yml  publish-pypi.yml  unittests.yml
docs/: api.md  cookbook.md  migration.md
examples/: fields_demo.py  serialization_demo.py
scripts/: py-pre-commit
src/dataclassy/: __init__.py  core.py  py.typed  settings.py  utils.py
src/dataclassy/fields/: __init__.py  color.py  path.py  validators.py
src/dataclassy/serialization/: __init__.py  converter.py  formats.py
src/tests/: test_bool_conversion.py  test_core.py  test_edge_cases.py  test_fields.py  test_file_io_stubs.py  test_format_handlers.py  test_path_methods.py  test_path_parse_callback.py  test_serialization.py  test_settings.py  test_settings_comments.py  test_settings_env_coercion.py  test_settings_format_comments.py  test_strict_validation.py  test_type_conversion_edge_cases.py
